# sharpie

./: .gitignore  .gitmodules  LICENSE  README.md
common/: sharpie.h
common/pio/: sharpie-partial-gck-end.pio
sharpie-cad/: sharpie-carrier-Body.3mf  sharpie-carrier.FCStd
sharpie-formatter/: Cargo.toml  README.md
sharpie-formatter/src/: main.rs
sharpie-formatter/the_gang/: README.md
sharpie-formatter/the_gang/processed/: the_gang.raw
sharpie-hw/: .gitignore  display.kicad_sch  mcu.kicad_sch  power.kicad_sch  sharpie-hw.kicad_pcb  sharpie-hw.kicad_pro  sharpie-hw.kicad_sch  sharpie-hw.kicad_sym  tlv758-resistor-solver.py
sharpie-hw-rev2/: .gitignore  README.md  fp-info-cache  fp-lib-table  mcu.kicad_sch  power.kicad_sch  sharpie-hw.kicad_pcb  sharpie-hw.kicad_prl  sharpie-hw.kicad_pro  sharpie-hw.kicad_sch  sharpie-hw.kicad_sym  sym-lib-table
sharpie-hw-rev2/Sharpie.pretty/: Chungus.kicad_mod  FPC-SMD_21P-P0.30-503566-2102.kicad_mod
sharpie-hw/Sharpie.pretty/: FPC-SMD_21P-P0.30-503566-2102.kicad_mod  KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  TYPE-C-31-M-12.kicad_mod
sharpie-rp2040/: CMakeLists.txt  main.c  sharpie-gen.pio  sharpie-horiz-data.pio
sharpie-sw/: CMakeLists.txt  main.c  pencils.h  pico_sdk_import.cmake  sharpie-gen.pio  sharpie-horiz-data.pio  sharpie-partial-gck-end.pio  sharpie-partial-gck.pio  sharpie-partial-horiz-data.pio  sharpie-partial-intb-gsp.pio  sharpie-va-vb-vcom.pio  sharpie-vertical.pio  sharpie.h
sharpie-usb-display/: README.md
sharpie-usb-display/usb-display-client/: CMakeLists.txt  pico_sdk_import.cmake  sharpie-gen.pio  sharpie-horiz-data.pio  sharpie-usb-display-client.c  sharpie-vertical.pio  sharpie.h  tusb_config.h  usb_descriptors.c
sharpie-usb-display/usb-display-host/: Cargo.toml
sharpie-usb-display/usb-display-host/src/: main.rs
vdp_simulator/: Cargo.toml  png_to_raw.py
vdp_simulator/src/: main.rs
